docs: introduce a little half of analysis part

--- a/docs/00-title.tex
+++ b/docs/00-title.tex
@@ -37,7 +37,7 @@
 	\begin{center}
 		\fontsize{18pt}{0.6cm}\selectfont 
 		
-		<<Тема 123>>
+		Разработка метода сжатия оперативной памяти в ядре Linux
 		
 	\end{center}
 
@@ -47,21 +47,21 @@
 		\fontsize{12pt}{0.7\baselineskip}\selectfont
 		\centering
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Студент группы \textbf{<ИУ7-83Б>} & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{<М. Ю. Нитенко>} \hfill} \\
+			Студент группы \textbf{ИУ7-83Б} & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{А. В. Романов} \hfill} \\
 			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
 		\end{signstabular}
 
 		\vspace{\baselineskip}
 
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Руководитель ВКР & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{<А. А. Оленев>} \hfill} \\
+			Руководитель ВКР & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{А. А. Оленев} \hfill} \\
 			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
 		\end{signstabular}
 
 		\vspace{\baselineskip}
 
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Нормоконтролер & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{<Это кто>} \hfill} \\
+			Нормоконтролер & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{Ю. В. Строганов} \hfill} \\
 			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
 		\end{signstabular}
 	\end{table}
