--- a/docs/03-intro.tex
+++ b/docs/03-intro.tex
@@ -1,4 +1,9 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
 
+В данной научно-исследовательской работе должны быть проанализированы <Linux, zRam и оперативная память>.
+
+
+
+
 \pagebreak
