--- a/docs/60-bibliography.tex
+++ b/docs/60-bibliography.tex
@@ -4,12 +4,42 @@
 \begingroup
 \renewcommand{\section}[2]{}
 \begin{thebibliography}{}
-	\bibitem{arm_report}
-	Annual Report 2015: Strategic Report [Электронный ресурс]. – Режим доступа: https://media.corporate-ir.net/media\_files/IROL/19/197211/2016CustomWork/ARM\_Strategic\_Report.pdf,
-	свободный – (24.11.2021) (преза арма как оформить??)
+	\bibitem{cpu}
+	What is CPU (Central Processing Unit)? - Computer Hope [Электронный ресурс]. – Режим доступа: https://www.computerhope.com/jargon/c/cpu.htm,
+	свободный – (10.11.2021)
 	
-	\bibitem{qemu}
-	Bellard F. QEMU, a Fast and Portable Dynamic Translator [Текст]  / Bellard F. // FREENIX Track: 2005 USENIX Annual Technical Conference. – 2005. – С. 41-42.
+	\bibitem{cpu_pick}
+	Why Aren’t CPUs Getting Faster? - Apple Gazette [Электронный ресурс]. – Режим доступа: https://applegazette.com/mac/why-arent-cpus-getting-faster/,
+	свободный – (10.11.2021)
+	
+	\bibitem{ram}
+	What Does Computer Memory (RAM) Do? [Электронный ресурс]. – Режим доступа: https://www.crucial.com/articles/about-memory/support-what-does-computer-memory-do,
+	свободный – (10.11.2021)
+	
+	\bibitem{in-kernel-memory-compression}
+	In-kernel memory compression [Электронный ресурс]. – Режим доступа: https://lwn.net/Articles/545244/, свободный – (10.11.2021)
+	
+	\bibitem{increasing-ram-bad}
+	What are the negative effects on increasing RAM of a PC? [Электронный ресурс]. – Режим доступа: https://www.quora.com/What-are-the-negative-effects-on-increasing-RAM-of-a-PC, свободный – (10.11.2021)
+	
+	\bibitem{paging}
+	Paging | Android Developers [Электронный ресурс]. – Режим доступа: https://developer.android.com/jetpack/androidx/releases/paging, свободный – (10.11.2021)
+	
+	\bibitem{ssd-hdd-speed}
+	 SSD vs. HDD | Speed, Capacity, Performance \& Lifespan | AVG [Электронный ресурс]. – Режим доступа: https://www.avg.com/en/signal/ssd-hdd-which-is-best, свободный – (10.11.2021)
+	 
+	 \bibitem{linux}
+	 What is Linux? [Электронный ресурс]. – Режим доступа: https://www.linux.com/what-is-linux/, свободный – (10.11.2021)
+	
+	\bibitem{lossless-compression}
+	Industrial Control Technology. Peng Zhang, 2008. с. 675 - 774.
+	
+	\bibitem{memory-page}
+	Memory Management — The Linux Kernel documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/admin-guide/mm/index.html, свободный – (10.11.2021)
+	
+	\bibitem{4kb-page-size}
+	Using 4KB Page Size for Virtual Memory is Obsolete [Электронный ресурс]. – Режим доступа: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=\&arnumber=5211562, свободный – (10.11.2021)
+	
 \end{thebibliography}
 \endgroup
 
