--- a/docs/60-bibliography.tex
+++ b/docs/60-bibliography.tex
@@ -4,6 +4,10 @@
 \begingroup
 \renewcommand{\section}[2]{}
 \begin{thebibliography}{}
+	\bibitem{data-compression}
+	Data compression | University of Londond [Электронный ресурс]. – Режим доступа: https://london.ac.uk/sites/default/files/study-guides/data-compression.pdf,
+	свободный – (10.11.2021)
+	
 	\bibitem{cpu}
 	What is CPU (Central Processing Unit)? - Computer Hope [Электронный ресурс]. – Режим доступа: https://www.computerhope.com/jargon/c/cpu.htm,
 	свободный – (10.11.2021)
@@ -34,11 +38,17 @@
 	\bibitem{lossless-compression}
 	Industrial Control Technology. Peng Zhang, 2008. с. 675 - 774.
 	
-	\bibitem{memory-page}
-	Memory Management — The Linux Kernel documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/admin-guide/mm/index.html, свободный – (10.11.2021)
+	\bibitem{kernel-development}
+	Ядро Linux. Описание процесса разработки. Третье издание. Роберт Лав, 2019. с. 25 - 36.
 	
-	\bibitem{4kb-page-size}
-	Using 4KB Page Size for Virtual Memory is Obsolete [Электронный ресурс]. – Режим доступа: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=\&arnumber=5211562, свободный – (10.11.2021)
+	\bibitem{memory-page}
+	
+Memory Management — The Linux Kernel documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/admin-guide/mm/index.html, свободный – (10.11.2021)
+	
+	
+\bibitem{4kb-page-size}
+	
+Using 4KB Page Size for Virtual Memory is Obsolete [Электронный ресурс]. – Режим доступа: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=\&arnumber=5211562, свободный – (10.11.2021)
 	
 \end{thebibliography}
 \endgroup
